Fix animation sync issues, whitespaces

--- a/src/_/assets/css/app.css.scss
+++ b/src/_/assets/css/app.css.scss
@@ -93,7 +93,7 @@ header.has-face.is-waiting {
 
     // Hover
     $anim-duration: 4s;
-    $anim-timing: linear;
+    $anim-timing: ease;
     .face-canvas {
         @include animation(curious-hover-face $anim-duration $anim-timing infinite);
     }
